Closed Bug 217896 Opened 22 years ago Closed 22 years ago

ASSERTION: nsMemoryImpl::Alloc of 0: 'size' in GlobalWindowImpl::Unescape

Categories

(Core :: DOM: Core & HTML, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

Notes: 1. abusedContracts contains: "@mozilla.org/rdf/datasource;1?name=msgaccountmanager", "@mozilla.org/rdf/datasource;1?name=mailnewsfolders", (which shouldn't matter) 2. For some reason Gecko is having a very hard time rendering text using English characters. Console output: ###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/locale/win32-locale;1" when a service for this CID already exists! Add it to abusedContracts to track down the service consumer.: 'Error', file i:/build/mozilla/xpcom/components/nsComponentManager.cpp, line 2034 Reflow time (this=0D7B6EA8): Real time 0:0:0.691, CP time 0.681 Frame construction plus style resolution time (this=0D7B6EA8): Real time 0:0:0.551, CP time 0.541 Style resolution time (this=0D7B6EA8): Real time 0:0:3.205, CP time 0.751 WARNING: NS_ENSURE_TRUE(!aName.IsEmpty()) failed, file i:/build/mozilla/content/base/src/nsNodeInfoManager.cpp, line 226 ###!!! ASSERTION: unable to normalize attribute name: 'NS_SUCCEEDED(rv)', file i:/build/mozilla/content/xul/content/src/nsXULElement.cpp, line 1274 XPC - Begin deferred Release of 661 nsISupports pointers XPC - End deferred Releases Parse Time (this=0D6A3960): Real time 0:0:0.50, CP time 0.040 DTD Time: Real time 0:0:0.0, CP time 0.000 Tokenize Time: Real time 0:0:0.30, CP time 0.030 Reflow time (this=0D8513F8): Real time 0:0:0.70, CP time 0.070 Frame construction plus style resolution time (this=0D8513F8): Real time 0:0:0.251, CP time 0.250 Style resolution time (this=0D8513F8): Real time 0:0:0.260, CP time 0.200 ###!!! ASSERTION: nsMemoryImpl::Alloc of 0: 'size', file i:/build/mozilla/xpcom/base/nsMemoryImpl.cpp, line 322 Break: at file i:/build/mozilla/xpcom/base/nsMemoryImpl.cpp, line 322 nsDebug::Assertion(const char * 0x002f4200, const char * 0x002f41f8, const char * 0x002f41c8, int 322) line 109 nsMemoryImpl::Alloc(nsMemoryImpl * const 0x00437328, unsigned int 0) line 322 + 31 bytes nsMemory::Alloc(unsigned int 0) line 88 GlobalWindowImpl::Unescape(GlobalWindowImpl * const 0x0d4872cc, const nsAString & {...}, nsAString & {...}) line 3695 + 12 bytes + charset {"UTF-8"} maxLength 0 unescapedByteCount 0 rv 0 + decoder {0x0d6fc7e8} + dest 0x002751a7 + encodedData 0x0d6fc830 "" destLen 0 XPTC_InvokeByIndex(nsISupports * 0x0d4872cc, unsigned int 84, unsigned int 2, nsXPTCVariant * 0x0012e97c) line 102 XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode CALL_METHOD) line 2023 + 42 bytes 0 [native frame] 1 anonymous(aSink = [xpconnect wrapped (nsISupports, nsIRDFDataSource, nsIRDFRemoteDataSource, nsIRDFXMLSink) @ 0xd9f51d 8]) ["chrome://communicator/content/pref/pref-applications.js":111] prefService = [xpconnect wrapped nsIPrefService @ 0xd78b158] prefBranch = [xpconnect wrapped nsIPrefBranch @ 0xd86dd68] neverAskSave = neverAskOpen = i = 0 type = undefined newEntries = [object Object] newEntry = undefined this = [object Object] 2 [native frame] I can reproduce this assert if i use javascript:unescape('') and walk past some problems where the document tries to use iso-8859-1 instead of ISO-8859-1. I thought there once was a bug for this but i couldn't find it.
Attachment #130691 - Flags: superreview?(jst)
Attachment #130691 - Flags: review?(caillon)
Comment on attachment 130691 [details] [diff] [review] don't do silly things that don't make sense sr=jst
Attachment #130691 - Flags: superreview?(jst) → superreview+
Attachment #130691 - Flags: review?(caillon) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: