Bug 217896 ASSERTION: nsMemoryImpl::Alloc of 0: 'size' in GlobalWindowImpl::Unescape r=caillon sr=jst